fix: Abyss: Breadcrumb buttons "resizing" when hovering
(integrated from komodo (trunk) change 83152 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@14006 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/modules/abyss_skin/skin/_config/window.less
+++ b/src/modules/abyss_skin/skin/_config/window.less
@@ -112,6 +112,7 @@
 @statusbar-border-style:                solid;
 @statusbar-border-color:                @main-border-color;
 @statusbar-panel-border-image:          none;
+@statusbar-button-border:               1px solid transparent;
 
 @list-tree-appearance:                       none;
 @list-tree-background:                       lighten(@window-background, 5%);
