Skin: Use native statusbar on OSX
(integrated from komodo (trunk) change 83153 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@14008 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/mac/_config/window.less
+++ b/src/chrome/komodo/skin/plat/mac/_config/window.less
@@ -15,11 +15,12 @@
 @main-border:                           1px solid @main-border-color;
 @main-border-inactive:                  1px solid @main-border-color-inactive;
 
-@statusbar-background:                  #ebebeb url('chrome://komodo/skin/images/status-bg.png') top center repeat-x;
+@statusbar-appearance:                  statusbar;
+@statusbar-background:                  disabled;
 @statusbar-text-color:                  #4f4f4f;
 @statusbar-font:                        "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
 @statusbar-font-size:                   inherit;
-@statusbar-border-width:                0 1px 0 0;
-@statusbar-border-style:                solid;
-@statusbar-border-color:                transparent;
-@statusbar-panel-border-image:          url('chrome://komodo/skin/images/status-separator.png') 1 1 stretch;
+@statusbar-border-width:                disabled;
+@statusbar-border-style:                disabled;
+@statusbar-border-color:                disabled;
+@statusbar-panel-border-image:          disabled;
