--- a/src/chrome/komodo/skin/plat/shared/window.less
+++ b/src/chrome/komodo/skin/plat/shared/window.less
@@ -261,7 +261,8 @@ button:not([disabled="true"]):not(.button-link):not([type="menu"]),
 
 /* Statusbar Buttons */
 
-statusbar:not(.bottombar) button:not([type="menu"]), statusbar:not(.bottombar) toolbarbutton
+statusbar:not(.bottombar) button:not([type="menu"]),
+statusbar:not(.bottombar) toolbarbutton
 {
     -moz-appearance: @statusbar-button-appearance;
     background: @statusbar-button-background;
@@ -378,6 +379,7 @@ radio
 statusbar
 {
     -moz-appearance: @statusbar-appearance !important;
+    background: @statusbar-background;
     padding: 0 !important;
     font-family: @statusbar-font;
     font-size: @statusbar-font-size;
@@ -387,8 +389,8 @@ statusbar
     & > statusbarpanel
     {
         -moz-appearance: none;
+        background: transparent;
         padding: 2px;
-        background: @statusbar-background;
         .border(@statusbar-border-width, @statusbar-border-style, @statusbar-border-color);
         -moz-border-image: @statusbar-panel-border-image;
 
