Analytics: Komodo now has built-in analytics which will help us identify what areas to focus our efforts on. Analytics are opt-in and the underlying code is entirely open-source and available on our github. rn=
(integrated from komodo (trunk) change 83702 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@14189 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/shared/window.less
+++ b/src/chrome/komodo/skin/plat/shared/window.less
@@ -609,3 +609,9 @@ sidebarheader
 {
     background: @window-background;
 }
+
+// Make default button stand out a bit
+.notification-button-default
+{
+    font-weight: bold;
+}
