Editor: Track changes: Apply Undo's http://bugs.activestate.com/show_bug.cgi?id=102171 r=marky sr=toddw rn=
(integrated from komodo (trunk) change 84167 by ericp)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@14268 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/komodo.p.css
+++ b/src/chrome/komodo/skin/komodo.p.css
@@ -553,3 +553,9 @@ treechildren#toolbox2-hierarchy-treebody::-moz-tree-image {
   /* Collapse status images that are not showing anything. */
   display: none;
 }
+
+/* #if PLATFORM == "linux" */
+#changeTracker_undo {
+    min-height: 24px;
+}
+/* #endif */
