macros: add the icon for the new macro menu/toolbar
(integrated from komodo (trunk) change 84536 by toddw)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@14311 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/global/global.p.css
+++ b/src/chrome/komodo/skin/global/global.p.css
@@ -262,6 +262,10 @@
 }
 
 
+.macro-new-icon {
+  list-style-image : url("chrome://famfamfamsilk/skin/icons/control_add_blue.png");
+}
+
 .macro-play-icon {
   list-style-image : url("chrome://komodo/skin/images/macro_play.png");
 }
