--- a/src/chrome/komodo/skin/plat/shared/_config/icons.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/icons.less
@@ -227,6 +227,7 @@
 @icon-toolbar-debug-stop:         url("@{icon-toolbar-url-prefix}stop2.png");
 
 /* Toolbars - Macro's */
+@icon-toolbar-macro-new:          url("@{icon-toolbar-url-prefix}plus-circle.png");
 @icon-toolbar-macro-play:         url("@{icon-toolbar-url-prefix}play3.png");
 @icon-toolbar-macro-pause:        url("@{icon-toolbar-url-prefix}pause.png");
 @icon-toolbar-macro-record:       url("@{icon-toolbar-url-prefix}ko_record.png");
@@ -282,6 +283,7 @@
 @icon-unittest-edit-plan:       url("@{icon-url-prefix}pencil6.png");
 
 /* Macro Icons */
+@icon-macro-new:                url("@{icon-url-prefix}plus-circle.png");
 @icon-macro-play:               url("@{icon-url-prefix}play3.png");
 @icon-macro-pause:              url("@{icon-url-prefix}pause.png");
 @icon-macro-record:             url("@{icon-url-prefix}ko_record.png");
