--- a/src/chrome/komodo/skin/plat/shared/icons_rules.less
+++ b/src/chrome/komodo/skin/plat/shared/icons_rules.less
@@ -801,6 +801,11 @@ treechildren::-moz-tree-image(remotefile)
         list-style-image: @icon-toolbar-debug-stop !important;
     }
 
+    .macro-new-icon
+    {
+        list-style-image: @icon-toolbar-macro-new !important;
+    }
+
     .macro-play-icon
     {
         list-style-image: @icon-toolbar-macro-play !important;
@@ -1182,6 +1187,11 @@ treechildren::-moz-tree-image(remotefile)
 }
 
 /* Macro Icons */
+
+.macro-new-icon
+{
+    list-style-image: @icon-macro-new !important;
+}
 
 .macro-play-icon
 {
