--- a/src/modules/iconset_classic/skin/config.less
+++ b/src/modules/iconset_classic/skin/config.less
@@ -63,6 +63,7 @@
 @icon-toolbar-debug-stop:         url("chrome://fugue/skin/icons/control-stop-square.png");
 
 /* Toolbars - Macro's */
+@icon-toolbar-macro-new:          url("chrome://famfamfamsilk/skin/icons/control_add_blue.png");
 @icon-toolbar-macro-play:         url("chrome://komodo/skin/images/macro_play.png");
 @icon-toolbar-macro-pause:        url("chrome://komodo/skin/images/macro_pause.png");
 @icon-toolbar-macro-record:       url("chrome://komodo/skin/images/macro_record.png");
@@ -140,6 +141,7 @@
 @icon-debug-stop:         @icon-toolbar-debug-stop;
 @icon-debug-detach:       url("chrome://fugue/skin/icons/arrow-transition.png");
 @icon-debug-inspect:      url("chrome://fugue/skin/icons/control-triple.png");
+@icon-macro-new:                @icon-toolbar-macro-new;
 @icon-macro-play:               @icon-toolbar-macro-play;
 @icon-macro-pause:              @icon-toolbar-macro-pause;
 @icon-macro-record:             @icon-toolbar-macro-record;
