fix: Find Results: Add ability to copy results to the clipboard http://bugs.activestate.com/show_bug.cgi?id=91733 rn=
(integrated from komodo (trunk) change 84941 by toddw)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@14347 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/global/global.p.css
+++ b/src/chrome/komodo/skin/global/global.p.css
@@ -251,6 +251,15 @@
   /* #endif */
 }
 
+.find-copy-icon
+{
+  list-style-image : url("chrome://fugue/skin/icons/clipboard--plus.png");
+}
+.find-copy-icon[locked="true"]
+{
+  list-style-image : url("chrome://fugue/skin/icons/clipboard--plus.png");
+}
+
 /* TODO: disabled versions of these */
 .find-lock-icon
 {
