--- a/src/chrome/komodo/skin/plat/shared/icons_rules.less
+++ b/src/chrome/komodo/skin/plat/shared/icons_rules.less
@@ -355,6 +355,10 @@ menu .help-icon, menuitem .help-icon
     list-style-image: @icon-native-redo;
 }
 
+.find-copy-icon
+{
+    list-style-image: @icon-find-copy;
+}
 
 /* TODO: disabled versions of these */
 .find-lock-icon
@@ -1590,6 +1594,11 @@ ko-pane[type="icons"]
     .find-undo-icon
     {
         list-style-image: @icon-findresult-undo;
+    }
+
+    .find-copy-icon
+    {
+        list-style-image: @icon-findresult-copy;
     }
 
     .find-lock-icon
