--- a/src/modules/iconset_classic/skin/config.less
+++ b/src/modules/iconset_classic/skin/config.less
@@ -178,6 +178,7 @@
 @icon-findresult-down:          url("chrome://komodo/skin/images/small-arrow.png");
 @icon-findresult-stop:          url("chrome://komodo/skin/images/find_stop.png");
 @icon-findresult-undo:          url("chrome://komodo/skin/images/undo.png");
+@icon-findresult-copy:          url("chrome://komodo/skin/images/copy.png");
 @icon-findresult-lock:          url("chrome://fugue/skin/icons/lock-unlock.png");
 @icon-findresult-locked:        url("chrome://fugue/skin/icons/lock.png");
 
