--- a/src/chrome/komodo/skin/plat/shared/_config/icons.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/icons.less
@@ -67,6 +67,7 @@
 @icon-find-stop-disabled:       url("chrome://komodo/skin/images/find_stop_disable.png");
 @icon-native-undo:              url("@{icon-url-prefix}undo2.png");
 @icon-native-redo:              url("@{icon-url-prefix}redo2.png");
+@icon-find-copy:                url("chrome://fugue/skin/icons/clipboard--plus.png");
 @icon-find-lock:                url("chrome://fugue/skin/icons/lock-unlock.png");
 @icon-find-lock-locked:         url("chrome://fugue/skin/icons/lock.png");
 @icon-native-save:              url("chrome://komodo/skin/images/save.png");
@@ -366,6 +367,7 @@
 @icon-findresult-down:          url("@{icon-url-prefix}arrow-down4.png");
 @icon-findresult-stop:          url("@{icon-url-prefix}stop2.png");
 @icon-findresult-undo:          url("@{icon-url-prefix}undo2.png");
+@icon-findresult-copy:          url("@{icon-url-prefix}files.png");
 @icon-findresult-lock:          url("@{icon-url-prefix}ko_unlocked.png");
 @icon-findresult-locked:        url("@{icon-url-prefix}lock.png");
 
