notifications: don't use crazy jar:resource urls
(integrated from komodo (trunk) change 85349 by toddw)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@14377 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/notifications.css
+++ b/src/chrome/komodo/skin/notifications.css
@@ -77,11 +77,11 @@ notification:not([details]) .twistyImageWrapper {
 
 notification .twistyImage {
   margin-top: -moz-calc(16px - 9px);
-  list-style-image: url("jar:resource://gre/chrome/toolkit.jar!/skin/classic/global/tree/twisty-clsd.png");
+  list-style-image: url("chrome://global/skin/tree/twisty-clsd.png");
 }
 
 notification[open] .twistyImage {
-  list-style-image: url("jar:resource://gre/chrome/toolkit.jar!/skin/classic/global/tree/twisty-open.png");
+  list-style-image: url("chrome://global/skin/tree/twisty-open.png");
 }
 
 notification [anonid="text"] {
