--- a/src/modules/commando/skin/commando.less
+++ b/src/modules/commando/skin/commando.less
@@ -113,6 +113,9 @@ richlistbox#commando-results
         description .em
         {
             font-style: italic;
+            max-width: 100px;
+            opacity: 0.7;
+            margin-right: 5px;
         }
     }
 
