Skinning: Added 32px folder icon
(integrated from trunk branch change f86325c by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/_config/icons.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/icons.less
@@ -9,6 +9,7 @@
 @icon-cancel:                   url("@{icon-url-prefix}close.png");
 
 /* Folder Icons */
+@icon-folder-large:             url('chrome://komodo/skin/images/folder-32.png');
 @icon-folder-open:              url("chrome://komodo/skin/images/folder-open.png");
 @icon-folder-closed:            url("chrome://komodo/skin/images/folder-closed.png");
 @icon-folder-remote:            url("chrome://famfamfamsilk/skin/icons/folder_link.png");
