Commando: Use folder icon for directories
(integrated from trunk branch change 4dba801 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/commando/skin/commando.less
+++ b/src/modules/commando/skin/commando.less
@@ -91,6 +91,8 @@ richlistbox#commando-results
         {
             width: 32px;
             height: 32px;
+            max-height: 32px;
+            margin-top: 8px; /* Todo handle alignment automatically */
         }
 
         description
