Commando: Fix result description font size
(integrated from trunk branch change 29cf157 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/commando/skin/commando.less
+++ b/src/modules/commando/skin/commando.less
@@ -82,7 +82,7 @@ richlistbox#commando-results
             color: @list-listbox-item-color-selected;
         }
 
-        label
+        label.title
         {
             font-size: 120%;
         }
@@ -92,7 +92,7 @@ richlistbox#commando-results
             width: 32px;
             height: 32px;
             max-height: 32px;
-            margin-top: 8px; /* Todo handle alignment automatically */
+            margin-top: 4px; /* Todo handle alignment automatically */
         }
 
         description
