--- a/src/modules/commando/skin/commando.less
+++ b/src/modules/commando/skin/commando.less
@@ -64,12 +64,27 @@ richlistbox#commando-results
         visibility: collapse;
     }
 
+    scrollbox
+    {
+        overflow-x: hidden !important;
+    }
+
     richlistitem
     {
         background-color: transparent;
         color: @window-color;
         padding: 5px;
         background-color: rgba(0,0,0,0.05);
+
+        &:not(.compact) .compact
+        {
+            visibility: collapse;
+        }
+
+        &.compact .full
+        {
+            visibility: collapse;
+        }
 
         &:nth-child(even)
         {
@@ -87,12 +102,20 @@ richlistbox#commando-results
             font-size: 120%;
         }
 
-        image
+        &:not(.compact) image
         {
             width: 32px;
             height: 32px;
             max-height: 32px;
             margin-top: 4px; /* Todo handle alignment automatically */
+        }
+
+        &.compact image
+        {
+            width: 16px;
+            height: 16px;
+            max-height: 16px;
+            margin-top: 4px;
         }
 
         description
@@ -105,6 +128,11 @@ richlistbox#commando-results
                 padding: 0;
                 -moz-appearance: none;
             }
+        }
+
+        &.compact description
+        {
+            font-size: 120%;
         }
 
         description .strong
