Commando: Implement subscopes
(integrated from trunk branch change 411d089 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/commando/skin/commando.less
+++ b/src/modules/commando/skin/commando.less
@@ -29,6 +29,17 @@
     -moz-appearance: none;
 }
 
+#commando-subscope
+{
+    visibility: collapse;
+    font-weight: bold;
+    padding: 3px;
+    background-color: @list-listbox-row-background-selected;
+    color: @list-listbox-item-color-selected;
+    border-radius: 3px;
+    max-width: 150px;
+}
+
 #commando-scope
 {
     -moz-appearance: none;
