Commando: Fix styling on OSX
(integrated from trunk branch change 5d748b0 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/commando/skin/commando.less
+++ b/src/modules/commando/skin/commando.less
@@ -111,6 +111,7 @@ richlistbox#commando-results
         label.title
         {
             font-size: 120%;
+            margin: 0 0 0 6px;
         }
 
         &:not(.compact) image
@@ -118,7 +119,6 @@ richlistbox#commando-results
             width: 32px;
             height: 32px;
             max-height: 32px;
-            margin-top: 4px; /* Todo handle alignment automatically */
         }
 
         &.compact image
@@ -126,12 +126,12 @@ richlistbox#commando-results
             width: 16px;
             height: 16px;
             max-height: 16px;
-            margin-top: 4px;
         }
 
         description
         {
             opacity: 0.7;
+            margin: 0 0 0 6px;
 
             label
             {
