--- a/src/modules/places/skin/places.p.less
+++ b/src/modules/places/skin/places.p.less
@@ -39,10 +39,9 @@ treechildren#places-files-tree-body::-moz-tree-cell-text {
    *    16px for width of native icon
    *    5px for half overlap of status icon (status icons are usually 9px).
    */
-  margin-left: -21px;
-  padding-left: 21px;
+  padding-right: 16px;
   background-repeat: no-repeat;
-  background-position: bottom left;
+  background-position: center right;
 }
 treechildren#places-files-tree-body::-moz-tree-cell-text(disabled) {
   color: grey;
