UI: Updated Places icons to use LESS icon rules
(integrated from trunk branch change f04dba8 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/_config/icons.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/icons.less
@@ -117,7 +117,7 @@
 @icon-list-item-up:             url("@{icon-url-prefix}arrow-up4.png");
 @icon-list-item-add:            url("@{icon-url-prefix}plus.png");
 @icon-list-item-edit:           url("@{icon-url-prefix}pencil6.png");
-@icon-list-item-remove:         url("@{icon-url-prefix}minus.png");
+@icon-list-item-remove:         url("@{icon-url-prefix}close2.png");
 @icon-button-moreinfo-open:     url("chrome://komodo/skin/images/less.gif");
 @icon-button-moreinfo:          url("chrome://komodo/skin/images/more.gif");
 @icon-stopsign-small:           url("chrome://komodo/skin/images/find_stop.png");
