--- a/src/chrome/komodo/skin/plat/shared/icons_rules.less
+++ b/src/chrome/komodo/skin/plat/shared/icons_rules.less
@@ -150,6 +150,7 @@ menu .menu-right
     list-style-image: @icon-folder-up;
 }
 
+.new-folder-icon,
 .newfolder-icon
 {
     list-style-image: @icon-newfolder;
@@ -492,11 +493,13 @@ button[type="moreinfo"]
     list-style-image: @icon-button-moreinfo;
 }
 
+.remote-folder-icon,
 treechildren::-moz-tree-image(remotefolder)
 {
     list-style-image: @icon-remotefolder;
 }
 
+.remote-file-icon,
 treechildren::-moz-tree-image(remotefile)
 {
     list-style-image: @icon-remotefile;
