UI: Show unified menu button in statusbar if both menubar and statusbar are hidden
rn=

(integrated from trunk branch change eca0416 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/icons_rules.less
+++ b/src/chrome/komodo/skin/plat/shared/icons_rules.less
@@ -860,6 +860,11 @@ treechildren::-moz-tree-image(remotefile)
 
 }
 
+statusbar .menu-icon
+{
+    list-style-image: @icon-toolbar-menu !important;
+}
+
 /* Icons that appear in menu's and misc places */
 #buttonBrowserPreview
 {
