UI: Don't show UI resize grippy, modern WM's dont need this
(integrated from trunk branch change 5227492 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/window.less
+++ b/src/chrome/komodo/skin/plat/shared/window.less
@@ -259,6 +259,16 @@ button:not([disabled="true"]):not(.button-link):not([type="menu"]),
     color: @textbox-color;
 }
 
+/* Statusbar */
+
+statusbar
+{
+    .statusbar-resizerpanel
+    {
+        visibility: collapse;
+    }
+}
+
 /* Statusbar Buttons */
 
 statusbar:not(.bottombar) button:not([type="menu"]),
