Commando: Workaround for scrollbox not sizing properly
(integrated from trunk branch change 3b3e383 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/commando/skin/commando.less
+++ b/src/modules/commando/skin/commando.less
@@ -78,6 +78,7 @@ richlistbox#commando-results
     scrollbox
     {
         overflow-x: hidden !important;
+        padding-bottom: 25px; /* Hack to work around bug where scrollbox does not size itself properly - TODO: Find proper fix */
     }
 
     richlistitem
