UI: Editor: Visually overhauled codeintel autocompletion popups to look more pleasing
Will use either a light or dark theme depending on the active color
scheme (maximize contrast)
rn=

(integrated from trunk branch change 9f81b68 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/gnome/platform.less
+++ b/src/chrome/komodo/skin/plat/gnome/platform.less
@@ -3,6 +3,7 @@
 /* Inherited Style Groups */
 @import url("chrome://komodo/skin/plat/shared/scrolltabs.less");
 @import url("chrome://komodo/skin/plat/shared/icons.less");
+@import url("chrome://komodo/skin/plat/shared/codeintel.less");
 
 /* Larger Style Groups */
 @import url("chrome://komodo/skin/window.less");
