--- a/src/chrome/komodo/skin/plat/win/platform.less
+++ b/src/chrome/komodo/skin/plat/win/platform.less
@@ -3,6 +3,7 @@
 /* Inherited Style Groups */
 @import url("chrome://komodo/skin/plat/shared/scrolltabs.less");
 @import url("chrome://komodo/skin/plat/shared/icons.less");
+@import url("chrome://komodo/skin/plat/shared/codeintel.less");
 
 /* Larger Style Groups */
 @import url("chrome://komodo/skin/window.less");
