UI: Always use Highlight color for selected listbox/tree items
(integrated from trunk branch change d3e1d91 by nathanr <nathanr@activestate.com>)

--- a/src/chrome/komodo/skin/plat/shared/_config/window.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/window.less
@@ -136,11 +136,11 @@
 @list-tree-header-border-color:              disabled;
 @list-tree-header-color:                     disabled;
 @list-tree-item-color:                       disabled;
-@list-tree-item-color-selected:              -moz-cellhighlighttext;
+@list-tree-item-color-selected:              HighlightText;
 @list-tree-item-color-focus:                 HighlightText;
 @list-tree-row-background:                   transparent;
 @list-tree-row-background-odd:               disabled;
-@list-tree-row-background-selected:          -moz-cellhighlight;
+@list-tree-row-background-selected:          Highlight;
 @list-tree-row-background-focus:             Highlight;
 
 @list-listbox-appearance:                    none;
@@ -154,11 +154,11 @@
 @list-listbox-header-border:                 disabled;
 @list-listbox-header-color:                  disabled;
 @list-listbox-item-color:                    disabled;
-@list-listbox-item-color-selected:           -moz-cellhighlighttext;
+@list-listbox-item-color-selected:           HighlightText;
 @list-listbox-item-color-focus:              HighlightText;
 @list-listbox-row-background:                disabled;
 @list-listbox-row-background-odd:            disabled;
-@list-listbox-row-background-selected:       -moz-cellhighlight;
+@list-listbox-row-background-selected:       Highlight;
 @list-listbox-row-background-focus:          Highlight;
 
 /* Groupboxes */
